--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<reindexer.version>1.13-SNAPSHOT</reindexer.version>
+		<reindexer.version>1.15</reindexer.version>
 		<spring.version>5.3.14</spring.version>
 		<spring-data-commons.version>2.6.0</spring-data-commons.version>
 		<spring-test.version>5.3.14</spring-test.version>
