--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,14 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<reindexer.version>1.13-SNAPSHOT</reindexer.version>
+		<reindexer.version>1.15</reindexer.version>
 		<spring.version>5.3.14</spring.version>
 		<spring-data-commons.version>2.6.0</spring-data-commons.version>
 		<spring-test.version>5.3.14</spring-test.version>
 		<junit.version>5.8.2</junit.version>
+		<logback.version>1.2.11</logback.version>
+		<testcontainers.version>1.17.3</testcontainers.version>
+		<httpclient.version>4.5.13</httpclient.version>
 	</properties>
 
 	<profiles>
@@ -118,6 +121,21 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<!-- Activate the use of TCP to transmit events to the plugin. -->
+					<forkNode
+							implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.22.2</version>
+			</plugin>
+			<plugin>
 				<groupId>com.mycila</groupId>
 				<artifactId>license-maven-plugin</artifactId>
 				<version>3.0</version>
@@ -178,6 +196,30 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<version>${testcontainers.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>${testcontainers.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${httpclient.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
