--- a/pom.xml
+++ b/pom.xml
@@ -45,17 +45,18 @@
 	</scm>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>17</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<reindexer.version>1.17</reindexer.version>
-		<spring.version>5.3.14</spring.version>
-		<spring-data-commons.version>2.6.0</spring-data-commons.version>
-		<spring-test.version>5.3.14</spring-test.version>
-		<junit.version>5.8.2</junit.version>
-		<logback.version>1.2.11</logback.version>
+		<reindexer.version>1.22</reindexer.version>
+		<spring.version>6.2.0</spring.version>
+		<spring-data-commons.version>3.4.0</spring-data-commons.version>
+		<spring-test.version>6.2.0</spring-test.version>
+		<junit.version>5.11.3</junit.version>
+		<slf4j.version>2.0.16</slf4j.version>
+		<logback.version>1.5.12</logback.version>
 		<testcontainers.version>1.20.4</testcontainers.version>
-		<httpclient.version>4.5.13</httpclient.version>
+		<httpclient.version>4.5.14</httpclient.version>
 	</properties>
 
 	<profiles>
@@ -182,6 +183,12 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-commons</artifactId>
 			<version>${spring-data-commons.version}</version>
+		</dependency>
+		<!-- Logging-->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
 		</dependency>
 		<!-- Test -->
 		<dependency>
