--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
 		<logback.version>1.5.12</logback.version>
 		<testcontainers.version>1.20.4</testcontainers.version>
 		<httpclient.version>4.5.14</httpclient.version>
+		<assertj.version>3.27.2</assertj.version>
 	</properties>
 
 	<profiles>
@@ -234,6 +235,12 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>${httpclient.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
