--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 		<testcontainers.version>1.20.4</testcontainers.version>
 		<httpclient.version>4.5.14</httpclient.version>
 		<assertj.version>3.27.2</assertj.version>
+		<lombok.version>1.18.38</lombok.version>
 	</properties>
 
 	<profiles>
@@ -100,6 +101,13 @@
 					<compilerArgs>
 						<arg>-parameters</arg>
 					</compilerArgs>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -255,6 +263,12 @@
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
 			<version>${assertj.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
