--- a/.github/workflows/pr-build-workflow.yml
+++ b/.github/workflows/pr-build-workflow.yml
@@ -21,5 +21,7 @@ jobs:
       #          echo 'deb https://repo.reindexer.io/ubuntu-bionic /' | sudo tee -a /etc/apt/sources.list
       #          sudo apt-get update
       #          sudo apt-get install reindexer-dev
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots verify
+      - name: Build spring-data-reindexer
+        run: mvn --batch-mode --update-snapshots install
+      - name: Build spring-boot-starter-data-reindexer
+        run: mvn --batch-mode --update-snapshots -f spring-boot-starter-data-reindexer/pom.xml verify
