[spring-data-reindexer] Bump dependencies
- org.springframework:spring-context from 6.2.0 to 6.2.8
- org.springframework:spring-tx from 6.2.0 to 6.2.8
- org.springframework:spring-test from 6.2.0 to 6.2.8
- org.springframework.data:spring-data-commons from 3.4.0 to 3.5.1
- org.junit.jupiter:junit-jupiter-api from 5.11.3 to 5.13.1
- org.slf4j:slf4j-api from 2.0.16 to 2.0.17
- ch.qos.logback:logback-classic from 1.5.12 to 1.5.18
- org.testcontainers:testcontainers from 1.20.4 to 1.21.2
- org.testcontainers:junit-jupiter from 1.20.4 to 1.21.2
- org.apache.httpcomponents.client5:httpclient5 from 4.5.14 to 5.5
- org.assertj:assertj-core from 3.27.2 to 3.27.3

--- a/pom.xml
+++ b/pom.xml
@@ -49,15 +49,15 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<reindexer.version>1.27</reindexer.version>
-		<spring.version>6.2.0</spring.version>
-		<spring-data-commons.version>3.4.0</spring-data-commons.version>
-		<spring-test.version>6.2.0</spring-test.version>
-		<junit.version>5.11.3</junit.version>
-		<slf4j.version>2.0.16</slf4j.version>
-		<logback.version>1.5.12</logback.version>
-		<testcontainers.version>1.20.4</testcontainers.version>
-		<httpclient.version>4.5.14</httpclient.version>
-		<assertj.version>3.27.2</assertj.version>
+		<spring.version>6.2.8</spring.version>
+		<spring-data-commons.version>3.5.1</spring-data-commons.version>
+		<spring-test.version>6.2.8</spring-test.version>
+		<junit.version>5.13.1</junit.version>
+		<slf4j.version>2.0.17</slf4j.version>
+		<logback.version>1.5.18</logback.version>
+		<testcontainers.version>1.21.2</testcontainers.version>
+		<httpclient.version>5.5</httpclient.version>
+		<assertj.version>3.27.3</assertj.version>
 		<lombok.version>1.18.38</lombok.version>
 	</properties>
 
@@ -254,8 +254,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
 			<version>${httpclient.version}</version>
 			<scope>test</scope>
 		</dependency>
