--- a/spring-boot-starter-data-reindexer/pom.xml
+++ b/spring-boot-starter-data-reindexer/pom.xml
@@ -33,17 +33,17 @@
 			<timezone>UTC+3</timezone>
 		</developer>
 	</developers>
-	
+
 	<properties>
 		<java.version>17</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<spring-boot.version>3.5.0</spring-boot.version>
-		<spring-data-reindexer.version>1.5-SNAPSHOT</spring-data-reindexer.version>
-		<httpclient.version>4.5.14</httpclient.version>
-		<testcontainers.version>1.21.1</testcontainers.version>
+		<spring-boot.version>3.5.3</spring-boot.version>
+		<spring-data-reindexer.version>1.5</spring-data-reindexer.version>
+		<httpclient.version>5.5</httpclient.version>
+		<testcontainers.version>1.21.2</testcontainers.version>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -75,13 +75,13 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
 			<version>${httpclient.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
