[spring-boot-starter-data-reindexer] Added spring.data.reindexer.repositories.type condition for imperative repositories

--- a/spring-boot-starter-data-reindexer/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/spring-boot-starter-data-reindexer/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -9,6 +9,12 @@
     {
       "name": "spring.data.reindexer.data-source-factory",
       "defaultValue": "next"
+    },
+    {
+      "name": "spring.data.reindexer.repositories.type",
+      "type": "org.springframework.boot.autoconfigure.data.RepositoryType",
+      "description": "Type of reindexer repositories to enable.",
+      "defaultValue": "auto"
     }
   ],
   "hints": [
