--- a/spring-boot-starter-data-reindexer/pom.xml
+++ b/spring-boot-starter-data-reindexer/pom.xml
@@ -34,6 +34,12 @@
 		</developer>
 	</developers>
 
+	<scm>
+		<url>https://github.com/evgeniycheban/spring-data-reindexer</url>
+		<connection>scm:git:https://github.com/evgeniycheban/spring-data-reindexer</connection>
+		<developerConnection>scm:git:https://github.com/evgeniycheban/spring-data-reindexer.git</developerConnection>
+	</scm>
+
 	<properties>
 		<java.version>17</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
