--- a/.github/workflows/release-build-workflow.yml
+++ b/.github/workflows/release-build-workflow.yml
@@ -59,7 +59,7 @@ jobs:
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
       - name: Perform release
-        run: mvn --batch-mode release:perform -Psign-artifacts
+        run: mvn --batch-mode release:perform -Psign-artifacts -Darguments="-f ${{ inputs.working-directory }}/pom.xml"
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
