[spring-boot-starter-data-reindexer] Support TLS connection
Closes gh-77

--- a/spring-boot-starter-data-reindexer/pom.xml
+++ b/spring-boot-starter-data-reindexer/pom.xml
@@ -45,7 +45,7 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<spring-boot.version>3.5.3</spring-boot.version>
-		<spring-data-reindexer.version>1.5</spring-data-reindexer.version>
+		<spring-data-reindexer.version>1.6-SNAPSHOT</spring-data-reindexer.version>
 		<httpclient.version>5.5</httpclient.version>
 		<testcontainers.version>1.21.2</testcontainers.version>
 	</properties>
