[spring-boot-starter-data-reindexer] Migrate to Spring Boot 4
- Add org.springframework.boot:spring-boot-autoconfigure:4.0.0
- Add org.springframework.boot:spring-boot-data-commons:4.0.0
- Removed org.springframework.boot:spring-boot-starter
- Bump org.springframework.boot:spring-boot-starter-test from 3.5.3 to 4.0.0
- Fixed imports and api usage

Closes gh-82

--- a/spring-boot-starter-data-reindexer/pom.xml
+++ b/spring-boot-starter-data-reindexer/pom.xml
@@ -44,7 +44,7 @@
 		<java.version>17</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<spring-boot.version>3.5.3</spring-boot.version>
+		<spring-boot.version>4.0.0</spring-boot.version>
 		<spring-data-reindexer.version>1.6-SNAPSHOT</spring-data-reindexer.version>
 		<httpclient.version>5.5</httpclient.version>
 		<testcontainers.version>1.21.2</testcontainers.version>
@@ -53,10 +53,15 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
 			<version>${spring-boot.version}</version>
 		</dependency>
-		<dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-data-commons</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
 			<groupId>io.github.evgeniycheban</groupId>
 			<artifactId>spring-data-reindexer</artifactId>
 			<version>${spring-data-reindexer.version}</version>
