--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: "maven"
+    target-branch: "main"
     directories:
       - "/"
       - "/spring-boot-starter-data-reindexer"
