--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<reindexer.version>1.32</reindexer.version>
 		<spring-data-commons.version>4.0.2</spring-data-commons.version>
+		<commons-lang3.version>3.20.0</commons-lang3.version>
 		<httpclient.version>5.6</httpclient.version>
 		<lombok.version>1.18.42</lombok.version>
 	</properties>
@@ -247,6 +248,12 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-commons</artifactId>
 			<version>${spring-data-commons.version}</version>
+		</dependency>
+		<!-- Utils -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3.version}</version>
 		</dependency>
 		<!-- Test -->
 		<dependency>
