--- a/spring-boot-starter-data-reindexer/pom.xml
+++ b/spring-boot-starter-data-reindexer/pom.xml
@@ -41,7 +41,7 @@
 		<spring-boot.version>4.0.2</spring-boot.version>
 		<spring-data-reindexer.version>1.6-SNAPSHOT</spring-data-reindexer.version>
 		<httpclient.version>5.6</httpclient.version>
-		<testcontainers.version>1.21.2</testcontainers.version>
+		<testcontainers.version>2.0.3</testcontainers.version>
 	</properties>
 
 	<dependencies>
@@ -75,7 +75,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.testcontainers</groupId>
-			<artifactId>junit-jupiter</artifactId>
+			<artifactId>testcontainers-junit-jupiter</artifactId>
 			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
